simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(const OpenMM_AmoebaMultipoleForce*)</code> */
	double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(OpenMM_AmoebaMultipoleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(Pointer target, double tol);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(OpenMM_AmoebaMultipoleForce*, double)</code> */
	void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(PointerByReference target, double tol);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(Pointer target, Pointer context, Pointer dipoles);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code> */
	void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(PointerByReference target, PointerByReference context, PointerByReference dipoles);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getInducedDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getInducedDipoles(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getInducedDipoles(Pointer target, Pointer context, Pointer dipoles);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getInducedDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code> */
	void OpenMM_AmoebaMultipoleForce_getInducedDipoles(PointerByReference target, PointerByReference context, PointerByReference dipoles);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getTotalDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getTotalDipoles(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getTotalDipoles(Pointer target, Pointer context, Pointer dipoles);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getTotalDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)</code> */
	void OpenMM_AmoebaMultipoleForce_getTotalDipoles(PointerByReference target, PointerByReference context, PointerByReference dipoles);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(OpenMM_AmoebaMultipoleForce*, const OpenMM_Vec3Array*, OpenMM_Context*, OpenMM_DoubleArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(Pointer target, Pointer inputGrid, Pointer context, Pointer outputElectrostaticPotential);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(OpenMM_AmoebaMultipoleForce*, const OpenMM_Vec3Array*, OpenMM_Context*, OpenMM_DoubleArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(PointerByReference target, PointerByReference inputGrid, PointerByReference context, PointerByReference outputElectrostaticPotential);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_DoubleArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(Pointer target, Pointer context, Pointer outputMultipoleMoments);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_DoubleArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(PointerByReference target, PointerByReference context, PointerByReference outputMultipoleMoments);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_updateParametersInContext(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_updateParametersInContext(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaMultipoleForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaOutOfPlaneBendForce<br>
	 * Original signature : <code>OpenMM_AmoebaOutOfPlaneBendForce* OpenMM_AmoebaOutOfPlaneBendForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaOutOfPlaneBendForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_destroy(OpenMM_AmoebaOutOfPlaneBendForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaOutOfPlaneBendForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_destroy(OpenMM_AmoebaOutOfPlaneBendForce*)</code> */
	void OpenMM_AmoebaOutOfPlaneBendForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaOutOfPlaneBendForce_getNumOutOfPlaneBends(const OpenMM_AmoebaOutOfPlaneBendForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_getNumOutOfPlaneBends(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaOutOfPlaneBendForce_getNumOutOfPlaneBends(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaOutOfPlaneBendForce_getNumOutOfPlaneBends(const OpenMM_AmoebaOutOfPlaneBendForce*)</code> */
	int OpenMM_AmoebaOutOfPlaneBendForce_getNumOutOfPlaneBends(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendCubic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendCubic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendCubic(Pointer target, double cubicK);
	/** Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendCubic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code> */
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendCubic(const OpenMM_AmoebaOutOfPlaneBendForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendCubic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendCubic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendCubic(const OpenMM_AmoebaOutOfPlaneBendForce*)</code> */
	double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendQuartic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendQuartic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendQuartic(Pointer target, double quarticK);
	/** Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendQuartic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code> */
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendQuartic(const OpenMM_AmoebaOutOfPlaneBendForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendQuartic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendQuartic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendQuartic(const OpenMM_AmoebaOutOfPlaneBendForce*)</code> */
	double OpenMM_AmoebaOutOfPlaneBendForce_getAmoebaGlobalOutOfPlaneBendQuartic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendPentic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendPentic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendPentic(Pointer target, double penticK);
	/** Original signature : <code>void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendPentic(OpenMM_AmoebaOutOfPlaneBendForce*, double)</code> */
	void OpenMM_AmoebaOutOfPlaneBendForce_setAmoebaGlobalOutOfPlaneBendPentic(PointerByReference target, double penticK);
